# AI_Collab_OS_A

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_api_keys.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: agents.py  api_keys.py  auth.py  deps.py  files.py  monitoring.py  projects.py  roles.py  templates.py  workflows.py  ws.py
backend/app/core/: cache.py  events.py  exceptions.py  logging.py  middleware.py  pubsub.py  rate_limit.py  redis.py  security.py  sse.py  websocket.py
backend/app/db/: seed.py  session.py
backend/app/db/models/: __init__.py  agent_message.py  api_key.py  base.py  project.py  project_agent.py  role_template.py  user.py  workflow.py
backend/app/engine/: graph_builder.py  runner.py  state.py  templates.py
backend/app/engine/nodes/: assign.py  discuss.py  execute.py  review.py
backend/app/engine/prompts/: templates.py
backend/app/schemas/: agent.py  api_key.py  auth.py  common.py  project.py  workflow.py
backend/app/services/: agent_service.py  api_key_service.py  auth_service.py  context_manager.py  file_service.py  llm_service.py  project_service.py  tool_service.py  workflow_service.py
backend/tests/: conftest.py  test_agents.py  test_api_keys.py  test_auth.py  test_health.py  test_monitoring.py  test_projects.py  test_rate_limit.py  test_workflows.py
docs/: API_DESIGN.md  ARCHITECTURE.md  DATABASE_DESIGN.md  PRD.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
(+34 files in other folders)
