[project]
name = "ai-collab-backend"
version = "3.0.0"
description = "AI-Collab-OS Backend - Multi-Agent Coordination Platform"
requires-python = ">=3.11"
authors = [{name = "AI-Collab Team"}]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",            # PostgreSQL async driver
    "aiosqlite>=0.20.0",          # SQLite async driver (dev)
    "alembic>=1.14.0",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.0",       # AES encryption for API keys

    # LLM & Agent
    "litellm>=1.52.0",
    "langgraph>=0.2.50",

    # Cache & Messaging
    "redis[hiredis]>=5.2.0",

    # Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # File / Git
    "GitPython>=3.1.43",
    "aiofiles>=24.1.0",

    # Utilities
    "httpx>=0.27.0",
    "tenacity>=9.0.0",            # Retry logic
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

sandbox = [
    "docker>=7.1.0",              # Docker SDK for sandbox execution
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
